name:                ponga
version:             0.1.0.0
synopsis:            Pong game with genetic AI
description:         Please see README.md
homepage:            https://github.com/foollbar/ponga#readme
license:             BSD3
license-file:        LICENSE
author:              foollbar
maintainer:          foollbar@gmail.com
copyright:           2016 foollbar
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable training
  hs-source-dirs:      src
  main-is:             Train.hs
  default-language:    Haskell2010
  other-modules:       Types, PongGame, Simulation, Utils
  build-depends:       base >= 4.7 && < 5
                     , random

executable visualize 
  hs-source-dirs:      src
  main-is:             Visualize.hs
  default-language:    Haskell2010
  other-modules:       Types, PongGame, Simulation, GUI, Utils
  build-depends:       base >= 4.7 && < 5
                     , random
                     , gloss

executable play
  hs-source-dirs:      src
  main-is:             Play.hs
  default-language:    Haskell2010
  other-modules:       Types, PongGame, GUI, Utils
  build-depends:       base >= 4.7 && < 5
                     , random
                     , gloss
